fixed couple of styling issues on mobile

--- a/css/apps/mail/mail-details.css
+++ b/css/apps/mail/mail-details.css
@@ -77,6 +77,7 @@
 
   .mail-body {
     margin-top: 30px;
+    overflow-y: scroll;
   }
 
   .mail-date {
@@ -85,5 +86,6 @@
 
   .mail-from {
     margin-top: 0px;
+    padding-bottom: 10px;
   }
 }
